# flask-blueprint-tutorial

./: .env.example  .gitignore  LICENSE  Makefile  Pipfile  README.md  config.py  gunicorn.conf.py  main.py  mypy.ini  pyproject.toml  requirements.txt  setup.py  wsgi.py
.github/: CODEOWNERS  dependabot.yml
.github/workflows/: pythonapp.yml
application/: __init__.py  api.py  assets.py  auth.py  forms.py  models.py  products.py  routes.py
application/account/: account.py  account_routes.py  assets.py
application/account/static/less/: profile.less
application/account/templates/: profile.jinja2
application/admin/: admin_routes.py  assets.py
application/admin/templates/: dashboard.html  dashboard.jinja2
application/api/: api.py
application/home/: home.py
application/home/static/less/: home.less
application/home/templates/: index.jinja2
application/landing/: assets.py  landing.py  landing_routes.py
application/landing/templates/: index.jinja2
application/main/: assets.py  main_routes.py
application/main/templates/: index.html  index.jinja2
application/product/: product.py
application/product/static/less/: product.less
application/products/: products.py
application/products/static/less/: products.less  vars.less
application/products/templates/: products.jinja2
application/profile/: profile.py
application/profile/templates/: profile.jinja2
application/static/src/js/: main.js
application/static/src/less/: account.less  dashboard.less  landing.less  nav.less  style.less
application/static/src/less/global/: global.less  nav.less  variables.less
application/templates/: analytics.jinja2  dashboard.html  index.html  layout.html  layout.jinja2  login.html  meta.html  navigation-default.html  navigation-default.jinja2  navigation-loggedin.jinja2  navigation.html  navigation.jinja2  scripts.jinja2  session.html
data/: products.json
flask_blueprint_tutorial/: __init__.py  api.py  assets.py
flask_blueprint_tutorial/home/: home.py
flask_blueprint_tutorial/home/static/less/: home.less
flask_blueprint_tutorial/home/templates/: index.jinja2
flask_blueprint_tutorial/product/: product.py
flask_blueprint_tutorial/product/static/less/: product.less
flask_blueprint_tutorial/product/templates/: product.jinja2
flask_blueprint_tutorial/products/: products.py
flask_blueprint_tutorial/products/templates/: products.jinja2
flask_blueprint_tutorial/profile/: profile.py
flask_blueprint_tutorial/profile/static/less/: profile.less
flask_blueprint_tutorial/profile/templates/: profile.jinja2
flask_blueprint_tutorial/static/src/less/: nav.less  style.less
flask_blueprint_tutorial/templates/: blueprintinfo.jinja2  layout.jinja2  navigation.jinja2
login_tutorial/: __init__.py  auth.py  forms.py  models.py  routes.py
login_tutorial/static/src/less/: account.less  dashboard.less
login_tutorial/templates/: layout.html  meta.html  signup.html
