[tool.poetry]
name = "flask_blueprint_tutorial"
version = "0.1.0"
description = "Structure your Flask apps in a scalable and intelligent way using Blueprints."
authors = ["Todd Birchard <todd@hackersandslackers.com>"]
maintainers = ["Todd Birchard <todd@hackersandslackers.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://hackersandslackers.com/flask-blueprints/"
repository = "https://github.com/hackersandslackers/flask-blueprint-tutorial/"
documentation = "https://hackersandslackers.com/flask-blueprints/"
keywords = [
    "Flask",
    "Blueprints",
    "Framework",
    "Python",
    "Tutorial"
]

[tool.poetry.dependencies]
python = "^3.9"
flask = "*"
flask_assets = "*"
faker = "*"
requests = "*"
python-dotenv = "*"
uwsgi = "2.0.21"
lesscpy = "*"
cssmin = "*"
jsmin = "*"
black = "*"
isort = "*"
flake8 = "*"

[tool.poetry.scripts]
run = "wsgi:app"

[tool.poetry.urls]
issues = "https://github.com/hackersandslackers/flask-blueprint-tutorial/issues"

[build-system]
requires = ["poetry>=1.3.1"]
build-backend = "poetry.masonry.api"

[tool.pylint.'MESSAGES CONTROL']
disable="C0103,C0301,W0703,W0621"

[tool.black]
line-length = 120